--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>FINAL LABORATORIO DE SOFTWARE</title>
-  </head>
+     <t1>JULIAN NIETO</t1>
+      </head>
   <body>
     (( CONTENIDO ))
   </body>
